--- a/customer_b_notebook.ipynb
+++ b/customer_b_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d1f090b7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6b305dc2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6be3497e",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,19 +727,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "eb3c6250",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns = df.columns.str.lower()\n",
-    "df.columns = df.columns.str.replace(' ','_')\n",
-    "df = df.rename(columns={'purchase_amount_(usd)':'purchase_amount'})\n",
-    "#df.columns = df.columns.str.replace('_', '', regex=True).str.strip().str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "id": "acaadaae",
    "metadata": {},
@@ -969,19 +956,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "bc86ae28",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Created anew column age_group\n",
     "labels = ['Young Adult', 'Adult', 'Middle-aged', 'Senior']\n",
-    "df['Age_Group'] = pd.qcut(df['Age'], q=4, labels = labels)"
+    "df['age_group'] = pd.qcut(df['age'], q=4, labels = labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "150abe39",
    "metadata": {},
    "outputs": [
@@ -1006,8 +993,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Age_Group</th>\n",
+       "      <th>age</th>\n",
+       "      <th>age_group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1076,7 +1063,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    Age    Age_Group\n",
+       "    age    age_group\n",
        "0    55  Middle-aged\n",
        "1    19  Young Adult\n",
        "2    50  Middle-aged\n",
@@ -1091,13 +1078,13 @@
        "11   30  Young Adult"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['Age','Age_Group']].head(12)"
+    "df[['age','age_group']].head(12)"
    ]
   },
   {
@@ -1407,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "b18b1cc6-b57b-4d12-ba5b-8598bf65e942",
    "metadata": {},
    "outputs": [
@@ -1432,24 +1419,25 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Customer ID</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item Purchased</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Purchase Amount (USD)</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Color</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Review Rating</th>\n",
-       "      <th>Subscription Status</th>\n",
-       "      <th>Shipping Type</th>\n",
-       "      <th>Discount Applied</th>\n",
-       "      <th>Promo Code Used</th>\n",
-       "      <th>Previous Purchases</th>\n",
-       "      <th>Payment Method</th>\n",
-       "      <th>Frequency of Purchases</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>item_purchased</th>\n",
+       "      <th>category</th>\n",
+       "      <th>purchase_amount</th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>color</th>\n",
+       "      <th>season</th>\n",
+       "      <th>review_rating</th>\n",
+       "      <th>subscription_status</th>\n",
+       "      <th>shipping_type</th>\n",
+       "      <th>discount_applied</th>\n",
+       "      <th>promo_code_used</th>\n",
+       "      <th>previous_purchases</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>frequency_of_purchases</th>\n",
+       "      <th>age_group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1473,6 +1461,7 @@
        "      <td>14</td>\n",
        "      <td>Venmo</td>\n",
        "      <td>Fortnightly</td>\n",
+       "      <td>Middle-aged</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1494,6 +1483,7 @@
        "      <td>2</td>\n",
        "      <td>Cash</td>\n",
        "      <td>Fortnightly</td>\n",
+       "      <td>Young Adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1515,6 +1505,7 @@
        "      <td>23</td>\n",
        "      <td>Credit Card</td>\n",
        "      <td>Weekly</td>\n",
+       "      <td>Middle-aged</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1536,6 +1527,7 @@
        "      <td>49</td>\n",
        "      <td>PayPal</td>\n",
        "      <td>Weekly</td>\n",
+       "      <td>Young Adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1557,42 +1549,43 @@
        "      <td>31</td>\n",
        "      <td>PayPal</td>\n",
        "      <td>Annually</td>\n",
+       "      <td>Middle-aged</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Customer ID  Age Gender Item Purchased  Category  Purchase Amount (USD)  \\\n",
-       "0            1   55   Male         Blouse  Clothing                     53   \n",
-       "1            2   19   Male        Sweater  Clothing                     64   \n",
-       "2            3   50   Male          Jeans  Clothing                     73   \n",
-       "3            4   21   Male        Sandals  Footwear                     90   \n",
-       "4            5   45   Male         Blouse  Clothing                     49   \n",
+       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
+       "0            1   55   Male         Blouse  Clothing               53   \n",
+       "1            2   19   Male        Sweater  Clothing               64   \n",
+       "2            3   50   Male          Jeans  Clothing               73   \n",
+       "3            4   21   Male        Sandals  Footwear               90   \n",
+       "4            5   45   Male         Blouse  Clothing               49   \n",
        "\n",
-       "        Location Size      Color  Season  Review Rating Subscription Status  \\\n",
+       "        location size      color  season  review_rating subscription_status  \\\n",
        "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
        "1          Maine    L     Maroon  Winter            3.1                 Yes   \n",
        "2  Massachusetts    S     Maroon  Spring            3.1                 Yes   \n",
        "3   Rhode Island    M     Maroon  Spring            3.5                 Yes   \n",
        "4         Oregon    M  Turquoise  Spring            2.7                 Yes   \n",
        "\n",
-       "   Shipping Type Discount Applied Promo Code Used  Previous Purchases  \\\n",
+       "   shipping_type discount_applied promo_code_used  previous_purchases  \\\n",
        "0        Express              Yes             Yes                  14   \n",
        "1        Express              Yes             Yes                   2   \n",
        "2  Free Shipping              Yes             Yes                  23   \n",
        "3   Next Day Air              Yes             Yes                  49   \n",
        "4  Free Shipping              Yes             Yes                  31   \n",
        "\n",
-       "  Payment Method Frequency of Purchases  \n",
-       "0          Venmo            Fortnightly  \n",
-       "1           Cash            Fortnightly  \n",
-       "2    Credit Card                 Weekly  \n",
-       "3         PayPal                 Weekly  \n",
-       "4         PayPal               Annually  "
+       "  payment_method frequency_of_purchases    age_group  \n",
+       "0          Venmo            Fortnightly  Middle-aged  \n",
+       "1           Cash            Fortnightly  Young Adult  \n",
+       "2    Credit Card                 Weekly  Middle-aged  \n",
+       "3         PayPal                 Weekly  Young Adult  \n",
+       "4         PayPal               Annually  Middle-aged  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,8 +1612,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "8cadd2ed-ec14-4f8c-acd4-f3c2dddecbe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renaming columns according to snake casing for better readability and documentation\n",
+    "\n",
+    "df.columns = df.columns.str.lower()\n",
+    "df.columns = df.columns.str.replace(' ','_')\n",
+    "df = df.rename(columns={'purchase_amount_(usd)':'purchase_amount'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1433696c-6003-4d4a-a4f5-52cf08dc6ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>item_purchased</th>\n",
+       "      <th>category</th>\n",
+       "      <th>purchase_amount</th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>color</th>\n",
+       "      <th>season</th>\n",
+       "      <th>review_rating</th>\n",
+       "      <th>subscription_status</th>\n",
+       "      <th>shipping_type</th>\n",
+       "      <th>discount_applied</th>\n",
+       "      <th>promo_code_used</th>\n",
+       "      <th>previous_purchases</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>frequency_of_purchases</th>\n",
+       "      <th>age_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Blouse</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Express</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Venmo</td>\n",
+       "      <td>Fortnightly</td>\n",
+       "      <td>Middle-aged</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Sweater</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Maroon</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Express</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>Fortnightly</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Jeans</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Maroon</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Free Shipping</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>Weekly</td>\n",
+       "      <td>Middle-aged</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Sandals</td>\n",
+       "      <td>Footwear</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Maroon</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Next Day Air</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>49</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>Weekly</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Blouse</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Turquoise</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Free Shipping</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>31</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>Annually</td>\n",
+       "      <td>Middle-aged</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
+       "0            1   55   Male         Blouse  Clothing               53   \n",
+       "1            2   19   Male        Sweater  Clothing               64   \n",
+       "2            3   50   Male          Jeans  Clothing               73   \n",
+       "3            4   21   Male        Sandals  Footwear               90   \n",
+       "4            5   45   Male         Blouse  Clothing               49   \n",
+       "\n",
+       "        location size      color  season  review_rating subscription_status  \\\n",
+       "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
+       "1          Maine    L     Maroon  Winter            3.1                 Yes   \n",
+       "2  Massachusetts    S     Maroon  Spring            3.1                 Yes   \n",
+       "3   Rhode Island    M     Maroon  Spring            3.5                 Yes   \n",
+       "4         Oregon    M  Turquoise  Spring            2.7                 Yes   \n",
+       "\n",
+       "   shipping_type discount_applied promo_code_used  previous_purchases  \\\n",
+       "0        Express              Yes             Yes                  14   \n",
+       "1        Express              Yes             Yes                   2   \n",
+       "2  Free Shipping              Yes             Yes                  23   \n",
+       "3   Next Day Air              Yes             Yes                  49   \n",
+       "4  Free Shipping              Yes             Yes                  31   \n",
+       "\n",
+       "  payment_method frequency_of_purchases    age_group  \n",
+       "0          Venmo            Fortnightly  Middle-aged  \n",
+       "1           Cash            Fortnightly  Young Adult  \n",
+       "2    Credit Card                 Weekly  Middle-aged  \n",
+       "3         PayPal                 Weekly  Young Adult  \n",
+       "4         PayPal               Annually  Middle-aged  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fc1b1ea9-528b-4e26-ba4a-9cfec9b1ea2b",
+   "id": "9d7f6038-cfb3-45c2-bf85-58158d1da9ed",
    "metadata": {},
    "outputs": [],
    "source": []
