--- a/customer_b_notebook.ipynb
+++ b/customer_b_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "d1f090b7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "6b305dc2",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "3d17bb1c",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "max              50.000000            NaN                    NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
    "id": "5646a47f",
    "metadata": {},
    "source": [
-    "# CONNECTION OF MYSQL\n"
+    "# CONNECTION OF MYSQL DATABASE\n"
    ]
   },
   {
@@ -1837,7 +1837,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
