--- a/customer_b_notebook.ipynb
+++ b/customer_b_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6b305dc2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "6be3497e",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0dcc4b8d",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "[3900 rows x 18 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3d17bb1c",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "max              50.000000            NaN                    NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "c12fc918",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "fd096539",
    "metadata": {},
    "outputs": [],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "db0a0e6a",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,22 +727,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "acaadaae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Customer_ID', 'Age', 'Gender', 'Item_Purchased', 'Category',\n",
-       "       'Purchase_Amount_USD', 'Location', 'Size', 'Color', 'Season',\n",
-       "       'Review_Rating', 'Subscription_Status', 'Shipping_Type',\n",
-       "       'Discount_Applied', 'Promo_Code_Used', 'Previous_Purchases',\n",
-       "       'Payment_Method', 'Frequency_of_Purchases'],\n",
+       "Index(['Customer ID', 'Age', 'Gender', 'Item Purchased', 'Category',\n",
+       "       'Purchase Amount (USD)', 'Location', 'Size', 'Color', 'Season',\n",
+       "       'Review Rating', 'Subscription Status', 'Shipping Type',\n",
+       "       'Discount Applied', 'Promo Code Used', 'Previous Purchases',\n",
+       "       'Payment Method', 'Frequency of Purchases'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "551524e7",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,19 +956,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "bc86ae28",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Created anew column age_group\n",
     "labels = ['Young Adult', 'Adult', 'Middle-aged', 'Senior']\n",
-    "df['age_group'] = pd.qcut(df['age'], q=4, labels = labels)"
+    "df['age_group'] = pd.qcut(df['Age'], q=4, labels = labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "150abe39",
    "metadata": {},
    "outputs": [
@@ -993,7 +993,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>age</th>\n",
+       "      <th>Age</th>\n",
        "      <th>age_group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1063,7 +1063,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    age    age_group\n",
+       "    Age    age_group\n",
        "0    55  Middle-aged\n",
        "1    19  Young Adult\n",
        "2    50  Middle-aged\n",
@@ -1078,18 +1078,18 @@
        "11   30  Young Adult"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['age','age_group']].head(12)"
+    "df[['Age','age_group']].head(12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "9eb89b39",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "5a96f4ba",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1210,7 @@
        "9                       90              Quarterly"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "435d59fb",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1320,7 @@
        "9              Yes             Yes"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "b18b1cc6-b57b-4d12-ba5b-8598bf65e942",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1424,7 @@
        "      <th>gender</th>\n",
        "      <th>item_purchased</th>\n",
        "      <th>category</th>\n",
-       "      <th>purchase_amount</th>\n",
+       "      <th>purchase_amount_usd</th>\n",
        "      <th>location</th>\n",
        "      <th>size</th>\n",
        "      <th>color</th>\n",
@@ -1438,6 +1438,7 @@
        "      <th>payment_method</th>\n",
        "      <th>frequency_of_purchases</th>\n",
        "      <th>age_group</th>\n",
+       "      <th>purchase_frequency_days</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1462,6 +1463,7 @@
        "      <td>Venmo</td>\n",
        "      <td>Fortnightly</td>\n",
        "      <td>Middle-aged</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1484,6 +1486,7 @@
        "      <td>Cash</td>\n",
        "      <td>Fortnightly</td>\n",
        "      <td>Young Adult</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1506,6 +1509,7 @@
        "      <td>Credit Card</td>\n",
        "      <td>Weekly</td>\n",
        "      <td>Middle-aged</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1528,6 +1532,7 @@
        "      <td>PayPal</td>\n",
        "      <td>Weekly</td>\n",
        "      <td>Young Adult</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1550,18 +1555,19 @@
        "      <td>PayPal</td>\n",
        "      <td>Annually</td>\n",
        "      <td>Middle-aged</td>\n",
+       "      <td>365</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
-       "0            1   55   Male         Blouse  Clothing               53   \n",
-       "1            2   19   Male        Sweater  Clothing               64   \n",
-       "2            3   50   Male          Jeans  Clothing               73   \n",
-       "3            4   21   Male        Sandals  Footwear               90   \n",
-       "4            5   45   Male         Blouse  Clothing               49   \n",
+       "   customer_id  age gender item_purchased  category  purchase_amount_usd  \\\n",
+       "0            1   55   Male         Blouse  Clothing                   53   \n",
+       "1            2   19   Male        Sweater  Clothing                   64   \n",
+       "2            3   50   Male          Jeans  Clothing                   73   \n",
+       "3            4   21   Male        Sandals  Footwear                   90   \n",
+       "4            5   45   Male         Blouse  Clothing                   49   \n",
        "\n",
        "        location size      color  season  review_rating subscription_status  \\\n",
        "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
@@ -1577,15 +1583,15 @@
        "3   Next Day Air              Yes             Yes                  49   \n",
        "4  Free Shipping              Yes             Yes                  31   \n",
        "\n",
-       "  payment_method frequency_of_purchases    age_group  \n",
-       "0          Venmo            Fortnightly  Middle-aged  \n",
-       "1           Cash            Fortnightly  Young Adult  \n",
-       "2    Credit Card                 Weekly  Middle-aged  \n",
-       "3         PayPal                 Weekly  Young Adult  \n",
-       "4         PayPal               Annually  Middle-aged  "
+       "  payment_method frequency_of_purchases    age_group  purchase_frequency_days  \n",
+       "0          Venmo            Fortnightly  Middle-aged                       14  \n",
+       "1           Cash            Fortnightly  Young Adult                       14  \n",
+       "2    Credit Card                 Weekly  Middle-aged                        7  \n",
+       "3         PayPal                 Weekly  Young Adult                        7  \n",
+       "4         PayPal               Annually  Middle-aged                      365  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "8cadd2ed-ec14-4f8c-acd4-f3c2dddecbe0",
    "metadata": {},
    "outputs": [],
@@ -1626,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "1433696c-6003-4d4a-a4f5-52cf08dc6ebd",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1662,7 @@
        "      <th>gender</th>\n",
        "      <th>item_purchased</th>\n",
        "      <th>category</th>\n",
-       "      <th>purchase_amount</th>\n",
+       "      <th>purchase_amount_usd</th>\n",
        "      <th>location</th>\n",
        "      <th>size</th>\n",
        "      <th>color</th>\n",
@@ -1670,6 +1676,7 @@
        "      <th>payment_method</th>\n",
        "      <th>frequency_of_purchases</th>\n",
        "      <th>age_group</th>\n",
+       "      <th>purchase_frequency_days</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1694,6 +1701,7 @@
        "      <td>Venmo</td>\n",
        "      <td>Fortnightly</td>\n",
        "      <td>Middle-aged</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1716,6 +1724,7 @@
        "      <td>Cash</td>\n",
        "      <td>Fortnightly</td>\n",
        "      <td>Young Adult</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1738,6 +1747,7 @@
        "      <td>Credit Card</td>\n",
        "      <td>Weekly</td>\n",
        "      <td>Middle-aged</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1760,6 +1770,7 @@
        "      <td>PayPal</td>\n",
        "      <td>Weekly</td>\n",
        "      <td>Young Adult</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1782,18 +1793,19 @@
        "      <td>PayPal</td>\n",
        "      <td>Annually</td>\n",
        "      <td>Middle-aged</td>\n",
+       "      <td>365</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
-       "0            1   55   Male         Blouse  Clothing               53   \n",
-       "1            2   19   Male        Sweater  Clothing               64   \n",
-       "2            3   50   Male          Jeans  Clothing               73   \n",
-       "3            4   21   Male        Sandals  Footwear               90   \n",
-       "4            5   45   Male         Blouse  Clothing               49   \n",
+       "   customer_id  age gender item_purchased  category  purchase_amount_usd  \\\n",
+       "0            1   55   Male         Blouse  Clothing                   53   \n",
+       "1            2   19   Male        Sweater  Clothing                   64   \n",
+       "2            3   50   Male          Jeans  Clothing                   73   \n",
+       "3            4   21   Male        Sandals  Footwear                   90   \n",
+       "4            5   45   Male         Blouse  Clothing                   49   \n",
        "\n",
        "        location size      color  season  review_rating subscription_status  \\\n",
        "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
@@ -1809,15 +1821,15 @@
        "3   Next Day Air              Yes             Yes                  49   \n",
        "4  Free Shipping              Yes             Yes                  31   \n",
        "\n",
-       "  payment_method frequency_of_purchases    age_group  \n",
-       "0          Venmo            Fortnightly  Middle-aged  \n",
-       "1           Cash            Fortnightly  Young Adult  \n",
-       "2    Credit Card                 Weekly  Middle-aged  \n",
-       "3         PayPal                 Weekly  Young Adult  \n",
-       "4         PayPal               Annually  Middle-aged  "
+       "  payment_method frequency_of_purchases    age_group  purchase_frequency_days  \n",
+       "0          Venmo            Fortnightly  Middle-aged                       14  \n",
+       "1           Cash            Fortnightly  Young Adult                       14  \n",
+       "2    Credit Card                 Weekly  Middle-aged                        7  \n",
+       "3         PayPal                 Weekly  Young Adult                        7  \n",
+       "4         PayPal               Annually  Middle-aged                      365  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1849,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
